--- a/CSS/style.css
+++ b/CSS/style.css
@@ -57,33 +57,79 @@
 
 .title {
     text-align: center;
-    margin-top: 50px;
+    padding-top: 40px;
     font-size: 40px;
     font-weight: bold;
-    margin-right: 20px;
     color: darkorange;
 }
 
 .menu {
     margin-top: 60px;
     text-align: center;
-    display: flex;
-    justify-content: space-around;
     font-family: 'Noto Sans JP', sans-serif;
-
+    /* margin-left: 10px; */
 }
 
-.espleso:hover {
+.menu-wrap {
+    justify-content: space-around;
+    display: flex;
+}
+
+.text-center {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.btn {
+    position: relative;
+    display: inline-block;
+    background-color: white;
+    color: orange;
+    padding: 15px 30px;
+    border: solid 1px orange;
+    border-radius: 50px;
+    transition: ease .2s;
+    outline: none;
+    overflow: hidden;
+    margin-right: 20px;
+}
+
+.btn span {
+    position: relative;
+    z-index: 3;
+    color: orange;
+}
+
+.btn:hover span {
+    color: white;
+}
+
+.bg-right:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: orange;
+    transition: transform .6s cubic-bezier(0.8, 0, 0.2, 1) 0s;
+    transform: scale(0, 1);
+    transform-origin: right top;
+}
+
+.bg-right:hover:before {
+    transform-origin: left top;
+    transform: scale(1, 1);
+}
+
+
+.menu-img:hover {
     opacity: 0.7;
+    transition-delay: 0.3s;
 }
 
-.pancake:hover {
-    opacity: 0.7;
-}
 
-.ecrea:hover {
-    opacity: 0.7;
-}
 
 .menu img {
     width: 300px;
@@ -91,30 +137,42 @@
 }
 
 .fruits {
-    margin-top: 100px;
+    margin-top: 50px;
     background-image: url(/Users/uozumikazuma/Desktop/cafe/img/フルーツ.jpg);
     background-attachment: fixed;
     height: 600px;
     position: relative;
 }
 
-.fruits-text {
+.fruits p {
     position: absolute;
     top: 50%;
-    left: 34%;
+    left: 50%;
     color: #f8f8ff;
-    font-size: 40px;
+    font-size: 30px;
+    margin: 0;
+    padding: 0;
+    transform: translate(-50%, -50%);
 }
 
-.access {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 50px;
+.access-wrap {
     background-color: #fffaf0;
 }
 
+.access {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 50px;
+
+}
+
+iframe {
+    margin-top: 20px;
+}
+
 .access-table {
-    margin-left: 60px;
+    margin-left: 50px;
     width: 600px;
     margin-top: 20px;
 
@@ -160,4 +218,16 @@
 .copy-right {
     text-align: center;
     padding-top: 60px;
+}
+
+
+@media screen and (max-width: 678px) {
+    .menu-wrap {
+        display: block;
+
+    }
+
+    .menu-img {
+        margin-top: 20px;
+    }
 }
